--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,19 @@
     <title>Login to MMS</title>
     <body>
         <h1>Login</h1>
-        <div></div>
+
+        {% if form.errors %}
+            <p style="color: red;">
+                Please correct the error{{ form.errors|pluralize }} below.
+            </p>
+        {% endif %}
+
+        <form action="" method="post">
+            <table>
+                {{ form.as_table }}
+            </table>
+            {% csrf_token %}
+            <input type="submit" value="Submit">
+        </form>
     </body>
 </html>
