--- a/templates/loginresults.html
+++ b/templates/loginresults.html
@@ -3,7 +3,7 @@
     <body>
         <h1>Welcome to Marilyn Monroe Spas</h1>
         <div></div>
-        <a href="/logout/">Login</a>
+        <a href="/logout/">Logout</a>
         <a href="/register">Register</a>
         <a href="/find/">Find Locations</a>
         <div></div>
