Added update account, reset pw, and session dictionary
added basic update account feature, update password feature, and create
a session dictionary builder in common for use across all forms

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,14 +2,17 @@
     <title>Welcome to MMS</title>
     <body>
         <h1>Welcome to Marilyn Monroe Spas</h1>
+        {%  if firstname %}
+            <div><h3>Welcome {{ firstname }}</h3></div>
+        {%  endif %}
         <div></div>
-        {% if message == "anonymous" %}
-            <a href="login/">Login</a>
-            <a href="register">Register</a>
-            <a href="find/">Find Locations</a>
-        {% else %}
+        {% if user_session %}
             <a href="logout/">Logout</a>
             <a href="myaccount">My Account</a>
+            <a href="find/">Find Locations</a>
+        {% else %}
+            <a href="login/">Login</a>
+            <a href="register">Register</a>
             <a href="find/">Find Locations</a>
         {% endif %}
         <div></div>
